--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -4,6 +4,7 @@ $color-text: #595959;
 $color-decor: #000;
 $color-vector: #BABABA;
 $color-background: #fff;
+$color-body: #F6F6F6;
 
 @mixin flex-container($jc, $ai){
     display: flex;
