init seacrh script part 2

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,12 @@ img {
   font-weight: 200;
   font-style: normal;
 }
+@font-face {
+  font-family: 'RF Dewi';
+  src: local("RF Dewi Semibold"), local("RF-Dewi-Semibold"), url("/fonts/RFDewi-Semibold.woff2") format("woff2"), url("/fonts/RFDewi-Semibold.woff") format("woff"), url("/fonts/RFDewi-Semibold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
 svg *[fill] {
   fill: currentColor;
 }
@@ -101,6 +107,10 @@ body {
 
 .container {
   padding: 0 10px;
+}
+
+.font__weight {
+  font-weight: 600;
 }
 
 .header__top {
