--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -27,3 +27,13 @@
     font-weight: 200;
     font-style: normal;
   }
+
+  @font-face {
+    font-family: 'RF Dewi';
+    src: local('RF Dewi Semibold'), local('RF-Dewi-Semibold'),
+        url('/fonts/RFDewi-Semibold.woff2') format('woff2'),
+        url('/fonts/RFDewi-Semibold.woff') format('woff'),
+        url('/fonts/RFDewi-Semibold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+  }
