--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import './base/reset';
 @import './base/fonts';
 @import './base/vars';
+@import './base/breackpoints';
 @import './base/basic';
 
 // Блоки
