--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ svg *[stroke] {
 
 body {
   font-family: 'RF Dewi';
-  background: #F6F6F6;
+  background: #f6f6f6;
 }
 
 .container {
@@ -114,6 +114,9 @@ body {
 }
 
 .header__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: relative;
   width: 100%;
 }
@@ -123,12 +126,18 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  border-bottom: 1px solid #BABABA;
+  border-bottom: 1px solid #bababa;
 }
 .header__top-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+}
+@media (max-width: 767.8px) {
+  .header__top-nav {
+    position: relative;
+  }
 }
 .header__action {
   display: flex;
@@ -141,6 +150,11 @@ body {
   align-items: center;
   position: relative;
 }
+@media (max-width: 767.8px) {
+  .header__menu {
+    position: static;
+  }
+}
 
 .nav__top-wrapper {
   display: flex;
@@ -148,15 +162,29 @@ body {
   align-items: center;
   position: relative;
 }
+@media (max-width: 767.8px) {
+  .nav__top-wrapper {
+    position: static;
+  }
+}
 
 .list__menu {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 767.8px) {
+  .list__menu {
+    display: none;
+  }
+}
 .list__menu-item {
-  padding: 27px 45px;
   position: relative;
+  width: 185px;
+  text-align: center;
+}
+.list__menu-item:last-child {
+  width: 296px;
 }
 .list__menu-item::after {
   position: absolute;
@@ -165,25 +193,26 @@ body {
   top: 0;
   height: 100%;
   width: 1px;
-  background-color: #BABABA;
+  background-color: #bababa;
 }
 .list__item-link {
+  display: inline-block;
   color: #000;
-  font-weight: 300;
+  line-height: 71px;
 }
 .list__item-link:hover {
-  color: #F86436;
+  color: #f86436;
 }
 
 .search__box-button {
   width: 76px;
   height: 71px;
   background-color: inherit;
-  border-left: 1px solid #BABABA;
+  border-left: 1px solid #bababa;
 }
 .search__box-button:hover {
   color: white;
-  background-color: #F86436;
+  background-color: #f86436;
 }
 .search__container {
   display: none;
@@ -193,7 +222,7 @@ body {
   width: 100%;
   height: 100%;
   padding: 1px;
-  border-left: 1px solid #BABABA;
+  border-left: 1px solid #bababa;
 }
 .search__container.active {
   display: block;
@@ -207,7 +236,7 @@ body {
   align-items: center;
   z-index: 2;
   height: 100%;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   position: relative;
 }
 .search__input {
@@ -215,11 +244,11 @@ body {
   outline: none;
   border: none;
   background-color: inherit;
-  caret-color: #F86436;
+  caret-color: #f86436;
 }
 .search__input::placeholder {
   font-size: 14px;
-  color: #BEBEBE;
+  color: #bebebe;
 }
 .search__button-input {
   width: 76px;
@@ -227,54 +256,103 @@ body {
   background-color: inherit;
 }
 .search__button-input:hover {
-  color: #F86436;
+  color: #f86436;
 }
 .search__result-list {
   position: absolute;
-}
-
-.language__list {
+  background-color: #fff;
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
-  position: relative;
-  border-left: 1px solid #BABABA;
 }
-.language__list-item {
-  position: relative;
+.search__result-item {
+  padding: 15px 30px;
+  width: 100%;
 }
-.language__list-item:hover .language__sublist {
+.search__result-link {
+  display: block;
+  position: relative;
+  padding-bottom: 15px;
+  color: #000;
+}
+.search__result-link::before {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #bababa;
+}
+.search__result-link::after {
+  position: absolute;
+  content: '';
+  background: url("../../assets/icon/arrow.svg") no-repeat right;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 9px;
+  width: 12px;
+}
+
+.result__item-data {
+  font-size: 11px;
+  color: #aeaeae;
+  position: relative;
+  padding-left: 14px;
+}
+.result__item-data::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  transform: translateY(-50%);
+  top: 50%;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #f86436;
+}
+
+.language__container {
+  border-left: 1px solid #bababa;
+}
+.language__container:hover .language__dropdown {
   display: block;
 }
-.language__item-link {
-  display: block;
-  font-size: 14px;
-  font-weight: 400;
-  color: #393939;
-  text-align: center;
+.language__button {
   width: 76px;
   height: 71px;
-  line-height: 70px;
+  background-color: #f6f6f6;
+  transition: 0.3s ease-in-out;
+  font-size: 14px;
 }
-.language__item-link:hover {
-  background-color: #F86436;
-  color: #fff;
+.language__button:hover {
+  background-color: #f86436;
+  color: #f6f6f6;
 }
-.language__sublist {
+.language__dropdown {
+  display: none;
+  position: relative;
+}
+.language__list {
   position: absolute;
   width: 100%;
-  display: none;
 }
-.language__sublist-link {
-  display: block;
-  padding: 17px;
-  text-align: center;
-  color: #BABABA;
+.language__item {
+  padding: 5px;
   background-color: #fff;
+  width: 100%;
+  cursor: pointer;
 }
-.language__sublist-link:hover {
-  color: #F86436;
+.language__link {
+  display: block;
+  text-align: center;
+  color: #000;
+}
+.language__link:hover {
+  color: #f86436;
 }
 
 .action__burger {
@@ -284,10 +362,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-left: 1px solid #BABABA;
+  border-left: 1px solid #bababa;
 }
 .action__burger:hover {
-  background-color: #F86436;
+  background-color: #f86436;
   color: #fff;
 }
 
