--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,250 +1,308 @@
 .header {
-    &__top {
-        position: relative;
-        width: 100%;
-        &::after{
-            position: absolute;
-            content: '';
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            border-bottom: 1px solid $color-vector;
-        }
-    }
+	&__top {
+		@include flex-container(space-between, center);
+		position: relative;
+		width: 100%;
+		&::after {
+			position: absolute;
+			content: '';
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			border-bottom: 1px solid $color-vector;
+		}
+	}
 
-    &__top-nav {
-        @include flex-container(space-between,center);
-        
-    }
+	&__top-nav {
+		@include flex-container(space-between, center);
+		width: 100%;
+		@include md-d {
+			position: relative;
+		}
+	}
 
-    &__action {
-        @include flex-container(center,center);
-    }
+	&__action {
+		@include flex-container(center, center);
+	}
 
-    &__menu{
-        @include flex-container(center,center);
-        position: relative;
-    }
+	&__menu {
+		@include flex-container(center, center);
+		position: relative;
+		@include md-d {
+			position: static;
+		}
+	}
 }
 .nav {
-
-    &__top-wrapper {
-        @include flex-container(space-between, center);
-        position: relative;
-    }
+	&__top-wrapper {
+		@include flex-container(space-between, center);
+		position: relative;
+		@include md-d {
+			position: static;
+		}
+	}
 }
 .logo {
-
-    &__link {
-    }
+	&__link {
+	}
 }
 .list {
+	&__menu {
+		@include flex-container(center, center);
 
-    &__menu {
-        @include flex-container(center,center);
-    }
+		@include md-d {
+			display: none;
+		}
+	}
 
-    &__menu-item {
-        padding: 27px 45px;
-        position: relative;
-        &::after{
-            position: absolute;
-            content: '';
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 1px;
-            background-color: $color-vector;
-        }
-    }
+	&__menu-item {
+		// padding: 27px 45px;
+		position: relative;
+		width: 185px;
+		text-align: center;
+		&:last-child {
+			width: 296px;
+		}
+		&::after {
+			position: absolute;
+			content: '';
+			left: 0;
+			top: 0;
+			height: 100%;
+			width: 1px;
+			background-color: $color-vector;
+		}
+	}
 
-    &__item-link {
-        color: $color-decor;
-        font-weight: 300;
-        &:hover{
-            color: $color-hover;
-        }
-    }
+	&__item-link {
+		display: inline-block;
+		color: $color-decor;
+		line-height: 71px;
+		&:hover {
+			color: $color-hover;
+		}
+	}
 }
-
-
 
 .search {
+	&__box {
+	}
 
-    &__box {
-    }
+	&__box-button {
+		width: 76px;
+		height: 71px;
+		background-color: inherit;
+		border-left: 1px solid $color-vector;
+		&:hover {
+			color: white;
+			background-color: $color-hover;
+		}
+	}
 
-    &__box-button {
-        width: 76px;
-        height: 71px;
-        background-color: inherit;
-        border-left: 1px solid $color-vector;
-        &:hover{
-            color: white;
-            background-color: $color-hover;
-        }
-    }
+	&__container {
+		display: none;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		padding: 1px;
+		border-left: 1px solid $color-vector;
+		&.active {
+			display: block;
+		}
+	}
 
-    &__container{
-        display: none;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        padding: 1px;
-        border-left: 1px solid $color-vector;
-        &.active {
-            display: block;
-        }
-    }
+	&__icon {
+		margin-left: 20px;
+	}
 
-    &__icon{
-        margin-left: 20px
-    }
+	&__box-form {
+		@include flex-container(space-between, center);
+		z-index: 2;
+		height: 100%;
+		background-color: $color-body;
+		position: relative;
+	}
 
-    &__box-form {
-        @include flex-container(space-between,center);
-        z-index: 2;
-        height: 100%;
-        background-color: $color-body;
-        position: relative;
-    }
+	&__input {
+		width: 100%;
+		outline: none;
+		border: none;
+		background-color: inherit;
+		caret-color: $color-hover;
+		&::placeholder {
+			font-size: 14px;
+			color: #bebebe;
+		}
+	}
 
-    &__input {
-        width: 100%;
-        outline: none;
-        border: none;
-        background-color: inherit;
-        caret-color: $color-hover;
-        &::placeholder{
-            font-size: 14px;
-            color: #BEBEBE;
-        }
-    }
+	&__button-input {
+		width: 76px;
+		height: 100%;
+		background-color: inherit;
+		&:hover {
+			color: $color-hover;
+		}
+	}
 
-    &__button-input {
-        width: 76px;
-        height: 100%;
-        background-color: inherit;
-        &:hover {
-            color: $color-hover;
-        }
-    }
+	&__result-list {
+		position: absolute;
+		background-color: $color-background;
+		width: 100%;
+		@include flex-container(center, flex-start);
+		flex-direction: column;
+	}
 
-    &__result-list{
-        position: absolute;
-    }
+	&__result-item {
+		padding: 15px 30px;
+		width: 100%;
+	}
+
+	&__result-link {
+		display: block;
+		position: relative;
+		padding-bottom: 15px;
+		color: $color-decor;
+		&::before {
+			position: absolute;
+			content: '';
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			height: 1px;
+			background-color: $color-vector;
+		}
+		&::after {
+			position: absolute;
+			content: '';
+			background: url('../../assets/icon/arrow.svg') no-repeat right;
+			right: 0;
+			top: 50%;
+			transform: translateY(-50%);
+			height: 9px;
+			width: 12px;
+		}
+	}
 }
+
+.result__item-data {
+	font-size: 11px;
+	color: $color-subtext;
+	position: relative;
+	padding-left: 14px;
+	&::after {
+		position: absolute;
+		content: '';
+		left: 0;
+		transform: translateY(-50%);
+		top: 50%;
+		width: 4px;
+		height: 4px;
+		border-radius: 50%;
+		background-color: #f86436;
+	}
+}
+
 .language {
+	&__container {
+		border-left: 1px solid $color-vector;
+		&:hover .language__dropdown {
+			display: block;
+		}
+	}
 
-    &__list {
-        @include flex-container(center,center);
-        flex-direction: column;
-        position: relative;
-        border-left: 1px solid $color-vector;
-    }
+	&__button {
+		width: 76px;
+		height: 71px;
+		background-color: $color-body;
+		transition: 0.3s ease-in-out;
+		font-size: 14px;
+		&:hover {
+			background-color: $color-hover;
+			color: $color-body;
+		}
+	}
 
-    &__list-item {
-        position: relative;
-        &:hover .language__sublist{
-            display: block;
-        }
-    }
+	&__dropdown {
+		display: none;
+		position: relative;
+	}
 
-    &__item-link {
-        display: block;
-        font-size: 14px;
-        font-weight: 400;
-        color: $color-title;
-        text-align: center;
-        width: 76px;
-        height: 71px;
-        line-height: 70px;
-        &:hover{
-            background-color: $color-hover;
-            color: $color-background;
-        }
-    }
+	&__list {
+		position: absolute;
+		width: 100%;
+	}
 
-    &__sublist {
-        position: absolute;
-        width: 100%;
-        display: none;
-    }
+	&__item {
+		padding: 5px;
+		background-color: $color-background;
+		width: 100%;
+		cursor: pointer;
+	}
 
-    &__sublist-item {
-    }
-
-    &__sublist-link {
-        display: block;
-        padding: 17px;
-        text-align: center;
-        color: $color-vector;
-        background-color: $color-background;
-        &:hover{
-            color: $color-hover;
-        }
-    }
+	&__link {
+		display: block;
+		text-align: center;
+		color: $color-decor;
+		&:hover {
+			color: $color-hover;
+		}
+	}
 }
-
 
 .action {
-
-    &__burger {
-        width: 87px;
-        height: 71px;
-        color: $color-decor;
-        @include flex-container(center,center);
-        border-left: 1px solid $color-vector;
-        &:hover{
-            background-color: $color-hover;
-            color: #fff;
-        }
-    }
+	&__burger {
+		width: 87px;
+		height: 71px;
+		color: $color-decor;
+		@include flex-container(center, center);
+		border-left: 1px solid $color-vector;
+		&:hover {
+			background-color: $color-hover;
+			color: #fff;
+		}
+	}
 }
 .burger {
+	&__menu {
+		position: relative;
+		height: 12px;
+		width: 23px;
+		&::after,
+		&::before,
+		& .burger-line {
+			position: absolute;
+			content: '';
+			width: 100%;
+			height: 1px;
+			background-color: currentColor;
+		}
 
-    &__menu {
-        position: relative;
-        height: 12px;
-        width: 23px;
-        &::after,
-        &::before,
-        & .burger-line {
-            position: absolute;
-            content: '';
-            width: 100%;
-            height: 1px;
-            background-color: currentColor;
-        }
+		&::before {
+			top: 0;
+		}
 
-        &::before{
-            top: 0;
-        }
+		& .burger-line {
+			top: 50%;
+			transform: translateY(-50%);
+		}
+		&::after {
+			bottom: 0;
+		}
 
-        & .burger-line{
-            top: 50%;
-            transform: translateY(-50%);
-        }
-        &::after{
-            bottom: 0;
-        }
+		&.active::before {
+			top: 50%;
+			transform: rotate(-45deg) translate(0, -50%);
+		}
 
-        &.active::before {
-            top: 50%;
-            transform: rotate(-45deg) translate(0, -50%);
-        }
+		&.active .burger-line {
+			opacity: 0;
+		}
 
-        &.active .burger-line {
-            opacity: 0;
-        }
-
-        &.active::after{
-            bottom: 50%;
-            transform: rotate(45deg) translate(0,50%) ;
-        }
-    }
+		&.active::after {
+			bottom: 50%;
+			transform: rotate(45deg) translate(0, 50%);
+		}
+	}
 }
-
-
