--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,39 +1,10 @@
 @font-face {
 	font-family: 'RF Dewi';
-	src: local('RF Dewi Black'), local('RF-Dewi-Black'),
-		url('../../fonts/RFDewi-Black.woff') format('woff2'),
-		url('/fonts/RFDewi-Black.woff') format('woff'),
-		url('/fonts/RFDewi-Black.ttf') format('truetype');
-	font-weight: 900;
-	font-style: bold;
-}
-
-@font-face {
-	font-family: 'RF Dewi';
-	src: local('RF Dewi Bold'), local('RF-Dewi-Bold'),
-		url('/fonts/RFDewi-Bold.woff2') format('woff2'),
-		url('/fonts/RFDewi-Black.woff') format('woff'),
-		url('/fonts/RFDewi-Bold.ttf') format('truetype');
-	font-weight: 700;
-	font-style: semibold;
-}
-
-@font-face {
-	font-family: 'RF Dewi';
-	src: local('RF Dewi Ultralight'), local('RF-Dewi-Ultralight'),
-		url('/fonts/RFDewi-Ultralight.woff2') format('woff2'),
-		url('/fonts/RFDewi-Ultralight.woff') format('woff'),
-		url('/fonts/RFDewi-Ultralight.ttf') format('truetype');
-	font-weight: 200;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'RF Dewi';
-	src: local('RF Dewi Semibold'), local('RF-Dewi-Semibold'),
-		url('/fonts/RFDewi-Semibold.woff2') format('woff2'),
-		url('/fonts/RFDewi-Semibold.woff') format('woff'),
-		url('/fonts/RFDewi-Semibold.ttf') format('truetype');
+	font-display: swap;
+	src: url('../../fonts/RFDewi-Semibold.eot');
+	src: local('O'), url('../../fonts/RFDewi-Semibold.woff') format('woff'),
+		url('../../fonts/RFDewi-Semibold.ttf') format('truetype'),
+		url('../../fonts/RFDewi-Semibold.svg') format('svg');
 	font-weight: 600;
-	font-style: normal;
+	font-style: semibold;
 }
