--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,9 @@ img {
 }
 
 @font-face {
-  font-family: 'RF Dewi';
-  font-display: swap;
-  src: url("./fonts/RFDewi-Semibold.eot");
-  src: local("O"), url("./fonts/RFDewi-Semibold.woff") format("woff"), url("./fonts/RFDewi-Semibold.ttf") format("truetype"), url("./fonts/RFDewi-Semibold.svg") format("svg");
-  font-weight: 600;
-  font-style: semibold;
+  font-family: 'RF-dewi';
+  font-weight: semibold;
+  src: url("../../fonts/RFDewi-Semibold.woff") format("woff"), url("../../fonts/RFDewi-Semibold.woff2") format("woff2");
 }
 svg *[fill] {
   fill: currentColor;
