--- a/scss/base/_basic.scss
+++ b/scss/base/_basic.scss
@@ -1,7 +1,9 @@
-body {
+body,
+html {
 	font-family: 'RF Dewi';
 	background: $color-body;
 	font-weight: 400;
+	color: $color-decor;
 }
 
 .container {
